--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,13 +1,13 @@
 name: Hello Word Example
 
 on:
-..workflow_dispatch:
+  workflow_dispatch:
 
 # Comment
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
     steps:
-      -name: Hello World Step
-      run: echo 'Hello World'
+      - name: Hello World Step
+        run: echo 'Hello World'
         
